--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+* {
+  scroll-behavior: smooth;
+}
+
+
 .App {
   min-height: 100vh;
   background-color: #39445a;
@@ -7,7 +12,23 @@
 }
 
 @media(max-width: 700px) {
-  .app {
+  .App {
     padding-top: 70px;
   }
+}
+
+@media (max-width: 1000px) {
+  .pageTitle {
+    font-size: 6.4vw;
+  }
+}
+.pageTitle {
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 2vw;
+  padding: 4px;
+  border-radius: 50px;
+  color: white;
 }
